tests/unit/default/syntax-error/156-alter-table-to-table.x.t
---- IN ----
*%table=>%new-table|
---- OUT ----
---- ERR ----
syntax: expected EOL after `...%new-table` near `|` at position 19 - at line 1
---- EXIT ----
1
